# AI-Research-Assistant

./: .env.example  .gitignore  pyproject.toml  readme.md
ai-agent-research-assistant/: script.py
ai-research-assitant/: script.py
ai-research-assitant/prompts/: generate_summary.md
prompts/: generate_report.md  relevance_filter.md
