[project]
name = "ai-research-assitant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
]
